Teillou-Logan0.github.io

--- a/projet.html
+++ b/projet.html
@@ -24,14 +24,22 @@
         <h2>Liste des Projets</h2>
 
         <div class="projet">
-            <h3>Projet Resto </h3>
-            <p><strong>Description :</strong> Test</p>
+            <h3>Projet Gestion Seminaire </h3>
+            <p><strong>Description et contexte :</strong> 
+                Un séminaire est prévu le 12 octobre 2222 autour des questions urbaines, il est ouvert aux acteurs des seules municipalités, qui peuvent venir de différents départements.
+                Ce séminaire, durant une seule journée, prévoit différentes conférences qui pour certaines ont lieu sur le même créneau horaire.
+
+                Les données sont stockées dans des fichiers JSON ; ainsi, pour utiliser l’application, il ne sera pas nécessaire d’installer une base de données.
+                Le site Web sera développé avec du code PHP et permet d'exploiter les formulaires de présentation.
+                Des fonctions permettront d’accéder aux données dans un répertoire dédié. Leurs spécifications (signatures, services) sont présentées sous un format HTML.
+            </p>
+            <p></p>
             <h4>Documentation :</h4>
             <p>test</p>
             <ul>
-                <li>Tache 1 </li>
-                <li>Tache 2</li>
-                <li>Tache 3</li>
+                <li> </li>
+                <li></li>
+                <li></li>
                 
             </ul>
             <p><a href="projet1.pdf" target="_blank">Télécharger le document de projet en PDF</a></p>
