--- a/projet.html
+++ b/projet.html
@@ -78,7 +78,7 @@
 
     <!-- Bouton de retour à l'accueil -->
     <div class="back-button">
-        <a href=" accueil.html">Retour à l'accueil</a>
+        <a href="index.html">Retour à l'accueil</a>
     </div>
 </div>
 
