amelioration projet et ajout css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <header>
     <div class="titre">
-    <h1>Portfolio - Teillou Logan</h1>
+        <h1>Portfolio - Teillou Logan</h1>
     </div>
 </header>
 
@@ -19,6 +19,8 @@
     <section id="presentation">
         <h2>Présentation Personnelle</h2>
         <p>Bonjour ! Je suis Teillou Logan, étudiant en deuxième année de BTS Services Informatiques aux Organisations (SIO) au lycée Suzanne Valadon à Limoges. Passionné par l’informatique, je me spécialise dans le développement d’applications et l’administration de systèmes et réseaux.</p>
+        <!-- Bouton vers la page des projets -->
+        <a href="projet.html" class="btn">Voir mes projets</a>
     </section>
 
     <!-- Le BTS SIO -->
