correctif de la page projet.html

--- a/projet.html
+++ b/projet.html
@@ -55,7 +55,7 @@
                     <h4>Partie 2 : Règlements </h4>
                     <p>Cette tâche doit permettre d'indiquer le règlement d'une facture d'un congressiste (la facture doit avoir été créée). S'il y a lieu on doit pouvoir indiquer l'organisme payeur.</p>
                 </div>
-                <a href="projet2.pdf" target="_blank" class="btn">Documentation</a>
+                <a href="projet2.pdf" target="_blank" class="btn">Documentation(en cours)</a>
             </div>
     
             <!-- Projet 3 -->
@@ -78,7 +78,7 @@
             <!-- Projet 4 -->
             <div class="projet">
                 <h3>EN COURS</h3>
-                <p>Un outil de gestion interne développé en C# et utilisant une base de données SQL Server.</p>
+                <p></p>
                 <!-- Partie 1 -->
                 <div class="projet-partie">
                     <h4></h4>
