--- a/projet.html
+++ b/projet.html
@@ -47,7 +47,7 @@
                 <p> projet consistant à développer l'application permettant la gestion du congrès (inscription des participants, mise en place de sessions, organisations des activités, facturation, etc.)</p>
                 <!-- Partie 1 -->
                 <div class="projet-partie">
-                    <h4>Partie 1 :Gestion des organismes payeurs :</h4>
+                    <h4>Partie 1 : Gestion des organismes payeurs :</h4>
                     <p>CCette tâche doit permettre la création, la modification, la suppression d’un organisme payeur à partir d’un formulaire.</p>
                 </div>
                 <!-- Partie 2 -->
@@ -72,7 +72,7 @@
                 <p>La société Le p'tit Jardinier a pour activité l'entretien des jardins pour les particuliers et les organisations. Etant contactée fréquemment pour des devis de taille de haies, elle souhaite mettre en place une application Web permettant à toute personne d'obtenir un tarif.</p>
                 <!-- Partie 1 -->
                 <div class="projet-partie">
-                    <h4>Gestion Contrôleur/Vue - Enchaînement de pages dans un site</h4>
+                    <h4>Partie 1 : Gestion Contrôleur/Vue - Enchaînement de pages dans un site</h4>
                     <p>Routage des pages,Création d'un contrôleur et d'une vue,Récupération d'une variable POST,Mettre une variable en variable de SESSION</p>
                 </div>
                 <!-- Partie 2 -->
@@ -82,7 +82,7 @@
                 </div>
                 <!-- Partie 3 -->
                 <div class="projet-partie">
-                    <h4>Gestion des formulaires</h4>
+                    <h4>Partie 2 : Gestion des formulaires</h4>
                     <p>Génération de formulaires à partir de modèles objets, Validation de formulaires</p>
                 </div>
                 <a href="projet4.pdf" target="_blank" class="btn">Documentation(en cours)</a>
