amélioration de la page projet.html et du style.css

--- a/projet.html
+++ b/projet.html
@@ -47,8 +47,8 @@
                 <p> projet consistant à développer l'application permettant la gestion du congrès (inscription des participants, mise en place de sessions, organisations des activités, facturation, etc.)</p>
                 <!-- Partie 1 -->
                 <div class="projet-partie">
-                    <h4>Partie 1 : Gestion des organismes payeurs :</h4>
-                    <p>CCette tâche doit permettre la création, la modification, la suppression d’un organisme payeur à partir d’un formulaire.</p>
+                    <h4>Partie 1 : Gestion des organismes payeurs</h4>
+                    <p>Cette tâche doit permettre la création, la modification, la suppression d’un organisme payeur à partir d’un formulaire.</p>
                 </div>
                 <!-- Partie 2 -->
                 <div class="projet-partie">
@@ -77,16 +77,26 @@
                 </div>
                 <!-- Partie 2 -->
                 <div class="projet-partie">
-                    <h4>Gestion modèles de données</h4>
+                    <h4>Partie 2 : Gestion modèles de données</h4>
                     <p>Initiation à l'utilisation d'une base de données avec un ORM</p>
                 </div>
                 <!-- Partie 3 -->
                 <div class="projet-partie">
-                    <h4>Partie 2 : Gestion des formulaires</h4>
+                    <h4>Partie 3 : Gestion des formulaires</h4>
                     <p>Génération de formulaires à partir de modèles objets, Validation de formulaires</p>
                 </div>
                 <a href="projet4.pdf" target="_blank" class="btn">Documentation(en cours)</a>
             </div>
         </div>
-    </section>    
+    </section>   
+
+    <div class="back-button">
+        <a href="index.html">Retour à l'accueil</a>
+    </div>
+    
+    <footer>
+        <a>Portfolio de Teillou Logan - BTS SIO | Lycée Suzanne Valadon, Limoges</a>
+    </footer>
+    
+
 </body>    
